Changed a couple colors and hopefully didn't break the website ;)

--- a/web/app/assets/stylesheets/_colors.scss
+++ b/web/app/assets/stylesheets/_colors.scss
@@ -1,7 +1,7 @@
 //== Colors
 
-$primary: #f9b233;
-$secondary: #252525;
+$primary: #3336f9;
+$secondary:#252525;
 $grey1: #41444d;
 $grey2: #777980;
 $grey3: #9da0a8;
