sylistic details added to the homepage. Draft:1

--- a/web/app/assets/stylesheets/application.css.scss
+++ b/web/app/assets/stylesheets/application.css.scss
@@ -9,6 +9,7 @@
 @import url(https://fonts.googleapis.com/css?family=Oswald:300,400,700);
 @import "_colors";
 
+@import "_welcomepage";
 
 body {
   padding: 0;
@@ -276,3 +277,4 @@ footer {
   border: solid 3px blue;
   width: 23%;
 }
+
