--- a/web/app/views/welcomepage/index.html.erb
+++ b/web/app/views/welcomepage/index.html.erb
@@ -1,3 +1,5 @@
+<% var = 10 %>
+
 <div class = "div-boxes">
     <h1 id = "team85-logo">TEAM 85</h1>
     <h3>Welcome to TEAM 85's Zeel's Legs of Steel Apllication</h3>
@@ -22,7 +24,7 @@
 <div class = "side-bar">
     <div class = "side-bar-text">
         <h4>Total Miles Run</h4>
-        <%= 85 %>
+        <%= var %>
     </div>
 
     <div class = "side-bar-text">
