Removed auto-add parameter for now. Maybe make race specific? Also added total pilots to view

--- a/web/app/views/system/pilot/index.html.haml
+++ b/web/app/views/system/pilot/index.html.haml
@@ -65,3 +65,6 @@
           = link_to(url_for(action: 'delete', id: pilot.id),{"data-confirm" => "Sure?", method: :delete}) do
             %button.btn.btn-warning
               = t('actions.delete')
+
+Total pilots:
+%p= @pilots.length
