--- a/web/app/views/system/pilot/index.html.haml
+++ b/web/app/views/system/pilot/index.html.haml
@@ -69,3 +69,6 @@
 Total pilots:
 %p= @pilots.length
 %p= link_to("Export", url_for(action: 'export'))
+= form_tag url_for(action: 'import'), :multipart => true do
+  = file_field_tag :file
+  = submit_tag "Import"
