--- a/web/app/views/welcomepage/index.html.erb
+++ b/web/app/views/welcomepage/index.html.erb
@@ -1,4 +1,4 @@
-<% var = 10 %>
+<% item1 = 10 %>
 
 <div class = "div-boxes">
     <h1 id = "team85-logo">TEAM 85</h1>
@@ -10,10 +10,6 @@
 </div>
 
 <div class = "div-boxes">
-    <h3>"You behave as if your grandma were right beside you"-Woody Flowers</h3>
-</div>
-
-<div class = "div-boxes">
     <h5>Inspired by the FIRST robotics innovation challenge<h5>
 </div>
 
@@ -21,10 +17,14 @@
     <p>Info about the FIRST Robotics team</p>
 </div>
 
+<div class = "div-boxes">
+    <h3>"You behave as if your grandma were right beside you"-Woody Flowers</h3>
+</div>
+
 <div class = "side-bar">
     <div class = "side-bar-text">
         <h4>Total Miles Run</h4>
-        <%= var %>
+        <%= item1 %>
     </div>
 
     <div class = "side-bar-text">
