Added team to pilots view and added new controller action to return team names

--- a/web/app/views/pilots/index.html.haml
+++ b/web/app/views/pilots/index.html.haml
@@ -8,6 +8,8 @@
       %th
         = t('pilot.name')
       %th
+        = t('pilot.team')
+      %th
         = t('pilot.quad')
       %th
         = t('pilot.total_races')
@@ -22,6 +24,9 @@
         %td
           %strong
             = pilot.name
+        %td
+          %strong
+            = pilot.team
         %td
           %strong
             = pilot.quad
