--- a/web/app/views/history/_pdf_results_competition_mode.html.haml
+++ b/web/app/views/history/_pdf_results_competition_mode.html.haml
@@ -7,4 +7,4 @@
 
 -@current_race_session_adapter.pilot_ids.each do |pilot_id|
   .alwaysbreak
-    = render partial: 'competition_mode_pilot', locals: {pilot: Pilot.find(pilot_id)}
+    = render partial: 'competition_mode_pilot', locals: {pilot: Pilot.with_deleted.find(pilot_id)}
