--- a/web/app/views/pilots/laps.html.haml
+++ b/web/app/views/pilots/laps.html.haml
@@ -1,6 +1,6 @@
 %ol.breadcrumb
   %li
-    = link_to('Pilots',{action: 'index', controller: '/pilots'})
+    = link_to('Participants',{action: 'index', controller: '/pilots'})
 
 .row
   .col-md-3
