--- a/web/app/views/principal/index.html.erb
+++ b/web/app/views/principal/index.html.erb
@@ -26,7 +26,7 @@ a:visited{
     color: yellow;
 }
 </style>
-<h1>Principal</h1>
+<h1>Classes</h1>
     <div id = "wrapper" class="wrapper">
 
     </div>
