--- a/web/app/assets/stylesheets/_welcomepage.scss
+++ b/web/app/assets/stylesheets/_welcomepage.scss
@@ -3,10 +3,11 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 
+
 .div-boxes {
-    border: solid 5px red;
+    border: solid 1px gray;
     border-radius: 15px;
-    width: 95%;
+    width: 90%;
     margin-bottom: 10px;
     padding-left: 5px;
     z-index: 25;
@@ -27,3 +28,6 @@
     background-color: white;
 }
 
+#backgroundGradient {
+    background: assets-url("blueBackground.png");
+}
