More pilots renamed to participants in views

--- a/web/app/views/history/index.html.haml
+++ b/web/app/views/history/index.html.haml
@@ -9,10 +9,10 @@
         %th
         %th Session
         %th Mode
-        %th Pilots
+        %th Participants
         %th Total Laps
         %th Fastest Lap
-        %th Fastest Pilot
+        %th Fastest Participant
         %th Avg Lap Time
         %th
     %tbody
