Added total laps to participants page

--- a/web/app/views/pilots/index.html.haml
+++ b/web/app/views/pilots/index.html.haml
@@ -1,5 +1,14 @@
 %h1
   Participants
+%table.table.table-striped
+  %thead
+    %tr
+      %th
+        = t('Total Laps')
+  %tbody
+    %td
+      %strong
+        = t(Pilot.all_laps)
 
 %table.table.table-striped
   %thead
