--- a/web/app/views/welcomepage/index.html.erb
+++ b/web/app/views/welcomepage/index.html.erb
@@ -1,10 +1,10 @@
 
 
-<div id = "backgroundGradient"class = "div-boxes">
-    <a href="/">
-        <h1 id = "team85-logo">TEAM 85</h1>
-        <h3>Welcome to TEAM 85's Zeel's Legs of Steel</h3>
-    </a>
+<div id = "backgroundGradient"class = "">
+    
+    <h1 id = "team85-logo">TEAM 85</h1>
+    <h3>Welcome to TEAM 85's Zeel's Legs of Steel</h3>
+    
 </div>
 
 <% if current_user%>
