Added count on bottom of pilots view and renamed a couple more things as participant rather than pilot

--- a/web/app/views/history/_race_info_header.html.haml
+++ b/web/app/views/history/_race_info_header.html.haml
@@ -3,10 +3,10 @@
     %thead
       %tr
         %th Mode
-        %th Num Pilots
+        %th Num Participants
         %th Total Laps
         %th Fastest Lap Time
-        %th Fastest Pilot
+        %th Fastest Participant
         %th Avg Lap time
         - if @current_race_session.mode == "competition"
           %th Max Laps
