--- a/web/app/views/pilots/index.html.haml
+++ b/web/app/views/pilots/index.html.haml
@@ -35,3 +35,6 @@
             = pilot.total_races
         %td
           = link_to(pilot.total_laps,{action: 'laps', id: pilot.id},class: 'btn btn-primary')
+Count: 
+%strong
+  = @pilots.count
