Added environment variable for assets prefix

--- a/web/app/views/welcomepage/index.html.erb
+++ b/web/app/views/welcomepage/index.html.erb
@@ -1,6 +1,6 @@
 
 
-<div id = "backgroundGradient"class = "">
+<div id = "backgroundGradient">
     
     <h1 id = "team85-logo">TEAM 85</h1>
     <h3>Welcome to TEAM 85's Zeel's Legs of Steel</h3>
