--- a/web/app/views/layouts/application.html.haml
+++ b/web/app/views/layouts/application.html.haml
@@ -19,7 +19,7 @@
             %span.icon-bar
             %span.icon-bar
             %span.icon-bar
-          %a.navbar-brand{:href => "/"}
+          %a.navbar-brand{:href => "#"}
             Zeel's Legs of Steel
         #navbar.collapse.navbar-collapse
           %ul.nav.navbar-nav.navbar-right
