--- a/web/app/views/pilots/laps.html.haml
+++ b/web/app/views/pilots/laps.html.haml
@@ -19,7 +19,7 @@
   %thead
     %tr
       %th Tracked on
-      %th Race
+      %th Event
       %th Lap Number
       %th Lap Time
       %th
@@ -32,7 +32,7 @@
             = lap_entry.created_at.to_s(:long)
         %td
           %strong
-            = lap_entry.race_session.title
+            = lap_entry.race_session&.title
         %td
           %strong
             = lap_entry.lap_num
